--- a/docs/components/CheckEmail.html
+++ b/docs/components/CheckEmail.html
@@ -564,7 +564,7 @@ export class CheckEmail {
   }
 
   startResendTimer() {
-    this.resendTimer &#x3D; 60; // 60 seconds
+    this.resendTimer &#x3D; 10; // 60 seconds
     const interval &#x3D; setInterval(() &#x3D;&gt; {
       this.resendTimer--;
       if (this.resendTimer &lt;&#x3D; 0) {
@@ -581,7 +581,7 @@ export class CheckEmail {
       this.loading &#x3D; false;
       return;
     }
-    this.authService.resendVerificationEmail(this.email).subscribe({
+    this.authService.resendVerificationEmail(this.email || &#x27;&#x27;).subscribe({
       next: (response) &#x3D;&gt; {
         console.log(&#x27;Resend verification email successful&#x27;, response);
         this.notify.showSuccess(&#x27;Verification email resent! Please check your inbox.&#x27;);
@@ -589,9 +589,9 @@ export class CheckEmail {
         this.loading &#x3D; false;
         this.cdr.detectChanges();
       },
-      error: (error) &#x3D;&gt; {
-        console.error(&#x27;Resend verification email failed&#x27;, error);
-        this.notify.showError(&#x27;Failed to resend verification email, Please try again.&#x27;);
+      error: (res) &#x3D;&gt; {
+        console.error(&#x27;Resend verification email failed&#x27;, res);
+        this.notify.showError(res.error.message || &#x27;Failed to resend verification email. Please try again.&#x27;);
         this.loading &#x3D; false;
         this.cdr.detectChanges();
       }
@@ -604,18 +604,21 @@ export class CheckEmail {
     <div class="tab-pane fade " id="templateData">
         <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;flex flex-row w-screen h-screen justify-between&quot;&gt;
   &lt;!-- left panel --&gt;
-  &lt;div class&#x3D;&quot;w-6/12 h-full flex flex-col p-12&quot;&gt;
+  &lt;div class&#x3D;&quot;w-full lg:w-6/12 h-full flex flex-col p-12&quot;&gt;
+
+    &lt;!-- Header --&gt;
     &lt;div class&#x3D;&quot;flex flex-row my-8 items-center&quot;&gt;
       &lt;img src&#x3D;&quot;images/logo-coloured.svg&quot; alt&#x3D;&quot;Maestro Logo&quot; class&#x3D;&quot;w-12 mr-2&quot;&gt;
       &lt;span class&#x3D;&quot;font-serif text-3xl h-max text-prussian-blue-900&quot;&gt;Maestro&lt;/span&gt;
     &lt;/div&gt;
+
     &lt;div class&#x3D;&quot;flex flex-col h-3/4 justify-between&quot;&gt;
       &lt;div&gt;
         &lt;h1 class&#x3D;&quot;text-2xl font-bold my-4&quot;&gt;Verify Email&lt;/h1&gt;
         &lt;p&gt;A verification mail has been sent to &lt;span class&#x3D;&quot;font-bold&quot;&gt;{{email}}&lt;/span&gt;&lt;/p&gt;
       &lt;/div&gt;
       &lt;button 
-        class&#x3D;&quot;text-left font-bold text-prussian-blue-900 disabled:text-prussian-blue-500 hover:text-prussian-blue-500&quot;
+        class&#x3D;&quot;text-left font-bold text-prussian-blue-900 disabled:text-prussian-blue-500 lg:hover:text-prussian-blue-500&quot;
         [disabled]&#x3D;&quot;(resendTimer &gt; 0) || (loading)&quot;
         (click)&#x3D;&quot;resendVerificationEmail()&quot;
       &gt;
@@ -624,7 +627,7 @@ export class CheckEmail {
     &lt;/div&gt;
   &lt;/div&gt;
   &lt;!-- right panel --&gt;
-  &lt;div class&#x3D;&quot;w-6/12 h-full relative&quot;&gt;
+  &lt;div class&#x3D;&quot;w-6/12 h-full relative hidden lg:block&quot;&gt;
     &lt;img src&#x3D;&quot;images/person-studying-1.png&quot; alt&#x3D;&quot;Maestro Logo&quot; class&#x3D;&quot;h-full w-full object-cover&quot;&gt;
     &lt;div class&#x3D;&quot;flex flex-row m-8 items-center absolute left-0 bottom-0&quot;&gt;
       &lt;img src&#x3D;&quot;images/logo-white.svg&quot; alt&#x3D;&quot;Maestro Logo&quot; class&#x3D;&quot;w-12 mr-2&quot;&gt;
@@ -665,9 +668,9 @@ export class CheckEmail {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div class="flex flex-row w-screen h-screen justify-between">  <!-- left panel -->  <div class="w-6/12 h-full flex flex-col p-12">    <div class="flex flex-row my-8 items-center">      <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>    </div>    <div class="flex flex-col h-3/4 justify-between">      <div>        <h1 class="text-2xl font-bold my-4">Verify Email</h1>        <p>A verification mail has been sent to <span class="font-bold">{{email}}</span></p>      </div>      <button         class="text-left font-bold text-prussian-blue-900 disabled:text-prussian-blue-500 hover:text-prussian-blue-500"        [disabled]="(resendTimer > 0) || (loading)"        (click)="resendVerificationEmail()"      >        Resend mail in {{resendTimer}} seconds      </button>    </div>  </div>  <!-- right panel -->  <div class="w-6/12 h-full relative">    <img src="images/person-studying-1.png" alt="Maestro Logo" class="h-full w-full object-cover">    <div class="flex flex-row m-8 items-center absolute left-0 bottom-0">      <img src="images/logo-white.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-white">Maestro</span>    </div>  </div></div><div [class]="`absolute left-4 bottom-4 flex flex-row items-center ${loading ? \'\' : \'hidden\'}`">  <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">  Resending Email...</div></div>'
+        var COMPONENT_TEMPLATE = '<div><div class="flex flex-row w-screen h-screen justify-between">  <!-- left panel -->  <div class="w-full lg:w-6/12 h-full flex flex-col p-12">    <!-- Header -->    <div class="flex flex-row my-8 items-center">      <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>    </div>    <div class="flex flex-col h-3/4 justify-between">      <div>        <h1 class="text-2xl font-bold my-4">Verify Email</h1>        <p>A verification mail has been sent to <span class="font-bold">{{email}}</span></p>      </div>      <button         class="text-left font-bold text-prussian-blue-900 disabled:text-prussian-blue-500 lg:hover:text-prussian-blue-500"        [disabled]="(resendTimer > 0) || (loading)"        (click)="resendVerificationEmail()"      >        Resend mail in {{resendTimer}} seconds      </button>    </div>  </div>  <!-- right panel -->  <div class="w-6/12 h-full relative hidden lg:block">    <img src="images/person-studying-1.png" alt="Maestro Logo" class="h-full w-full object-cover">    <div class="flex flex-row m-8 items-center absolute left-0 bottom-0">      <img src="images/logo-white.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-white">Maestro</span>    </div>  </div></div><div [class]="`absolute left-4 bottom-4 flex flex-row items-center ${loading ? \'\' : \'hidden\'}`">  <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">  Resending Email...</div></div>'
     var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'CheckEmail', 'selector': 'app-check-email'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
-    var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'}];
+    var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'},{'name': 'PreferenceValidator', 'selector': '[appPreferenceValidator]'},{'name': 'SubjectNameValidator', 'selector': '[appSubjectNameValidator]'}];
     var ACTUAL_COMPONENT = {'name': 'CheckEmail'};
 </script>
 <script src="../js/tree.js"></script>
