--- a/docs/components/Home.html
+++ b/docs/components/Home.html
@@ -444,7 +444,7 @@ export class Home {
     </div>
 
     <div class="tab-pane fade " id="templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;div&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;overflow-x-hidden&quot;&gt;
   &lt;app-landing (navigateSection)&#x3D;&quot;scrollTo($event)&quot; id&#x3D;&quot;top&quot;&gt;&lt;/app-landing&gt;
   &lt;app-features id&#x3D;&quot;features&quot;&gt;&lt;/app-features&gt;
   &lt;app-pricing id&#x3D;&quot;pricing&quot;&gt;&lt;/app-pricing&gt;
@@ -478,9 +478,9 @@ export class Home {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div>  <app-landing (navigateSection)="scrollTo($event)" id="top"></app-landing>  <app-features id="features"></app-features>  <app-pricing id="pricing"></app-pricing>  <app-contact (navigateSection)="scrollTo($event)" id="contact"></app-contact></div></div>'
+        var COMPONENT_TEMPLATE = '<div><div class="overflow-x-hidden">  <app-landing (navigateSection)="scrollTo($event)" id="top"></app-landing>  <app-features id="features"></app-features>  <app-pricing id="pricing"></app-pricing>  <app-contact (navigateSection)="scrollTo($event)" id="contact"></app-contact></div></div>'
     var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'CheckEmail', 'selector': 'app-check-email'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
-    var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'}];
+    var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'},{'name': 'PreferenceValidator', 'selector': '[appPreferenceValidator]'},{'name': 'SubjectNameValidator', 'selector': '[appSubjectNameValidator]'}];
     var ACTUAL_COMPONENT = {'name': 'Home'};
 </script>
 <script src="../js/tree.js"></script>
