--- a/docs/components/Login.html
+++ b/docs/components/Login.html
@@ -691,12 +691,11 @@ export class Login {
 
   onSubmit() {
     this.loading &#x3D; true;
-    // Later: replace with real API call
     if (this.emailCtrl.invalid || this.passwordCtrl.invalid) {
       this.notify.showError(&quot;Valid email and password required&quot;);
       this.loading &#x3D; false;
     } else {
-      this.authService.login({ email: this.email, password: this.password }).subscribe({
+      this.authService.login({ email: this.email.toLowerCase(), password: this.password }).subscribe({
         next: (response) &#x3D;&gt; {
           console.log(&#x27;Login successful&#x27;, response);
           localStorage.setItem(&#x27;accessToken&#x27;, response.accessToken);
@@ -707,9 +706,9 @@ export class Login {
           this.loading &#x3D; false;
           this.router.navigateByUrl(&#x27;/dashboard&#x27;);
         },
-        error: (error) &#x3D;&gt; {
-          console.error(&#x27;Login failed&#x27;, error);
-          this.notify.showError(&#x27;Invalid email or password&#x27;);
+        error: (res) &#x3D;&gt; {
+          console.error(&#x27;Login failed&#x27;, res);
+          this.notify.showError(res.error.message || &#x27;Login failed. Please try again.&#x27;);
           this.loading &#x3D; false;
           this.cdr.detectChanges();
         }
@@ -723,7 +722,9 @@ export class Login {
     <div class="tab-pane fade " id="templateData">
         <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;flex flex-row w-screen h-screen justify-between&quot;&gt;
   &lt;!-- left panel --&gt;
-  &lt;div class&#x3D;&quot;w-6/12 h-full flex flex-col p-12&quot;&gt;
+  &lt;div class&#x3D;&quot;w-full lg-w-6/12 h-full flex flex-col p-12&quot;&gt;
+
+    &lt;!-- Header --&gt;
     &lt;div class&#x3D;&quot;flex flex-row my-8 items-center&quot;&gt;
       &lt;img src&#x3D;&quot;images/logo-coloured.svg&quot; alt&#x3D;&quot;Maestro Logo&quot; class&#x3D;&quot;w-12 mr-2&quot;&gt;
       &lt;span class&#x3D;&quot;font-serif text-3xl h-max text-prussian-blue-900&quot;&gt;Maestro&lt;/span&gt;
@@ -779,19 +780,20 @@ export class Login {
 
       &lt;button 
         type&#x3D;&quot;submit&quot; 
-        class&#x3D;&quot;w-full rounded-md p-4 text-white font-bold bg-prussian-blue-900 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500&quot; 
+        class&#x3D;&quot;w-full rounded-md p-4 text-white font-bold bg-prussian-blue-900 lg:hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 relative&quot; 
         (click)&#x3D;&quot;onSubmit()&quot; 
         [disabled]&#x3D;&quot;loading&quot;
       &gt;
         Next
+        &lt;img src&#x3D;&quot;images/spinner.gif&quot; alt&#x3D;&quot;&quot; [class]&#x3D;&quot;&#x60;absolute right-2 top-3 w-8 h-8 mx-2  ${loading ? &#x27;&#x27; : &#x27;hidden&#x27;}&#x60;&quot;&gt;
       &lt;/button&gt;
     &lt;/form&gt;
-    &lt;div class&#x3D;&quot;self-center m-4&quot;&gt;
+    &lt;div class&#x3D;&quot;self-center m-4 pb-4&quot;&gt;
       New to Maestro? &lt;a href&#x3D;&quot;/signup&quot; class&#x3D;&quot;font-medium text-prussian-blue-900 hover:text-prussian-blue-500&quot;&gt;Sign Up!&lt;/a&gt;
     &lt;/div&gt;
   &lt;/div&gt;
   &lt;!-- right panel --&gt;
-  &lt;div class&#x3D;&quot;w-6/12 h-full relative&quot;&gt;
+  &lt;div class&#x3D;&quot;w-full h-full relative hidden lg:block&quot;&gt;
     &lt;img src&#x3D;&quot;images/person-studying-1.png&quot; alt&#x3D;&quot;Maestro Logo&quot; class&#x3D;&quot;h-full w-full object-cover&quot;&gt;
     &lt;div class&#x3D;&quot;flex flex-row m-8 items-center absolute left-0 bottom-0&quot;&gt;
       &lt;img src&#x3D;&quot;images/logo-white.svg&quot; alt&#x3D;&quot;Maestro Logo&quot; class&#x3D;&quot;w-12 mr-2&quot;&gt;
@@ -800,10 +802,10 @@ export class Login {
   &lt;/div&gt;
 &lt;/div&gt;
 
-&lt;div [class]&#x3D;&quot;&#x60;absolute left-4 bottom-4 flex flex-row items-center ${loading ? &#x27;&#x27; : &#x27;hidden&#x27;}&#x60;&quot;&gt;
+&lt;!-- &lt;div [class]&#x3D;&quot;&#x60;absolute left-4 top-8 flex flex-row items-center ${loading ? &#x27;&#x27; : &#x27;hidden&#x27;}&#x60;&quot;&gt;
   &lt;img src&#x3D;&quot;images/spinner.gif&quot; alt&#x3D;&quot;&quot; class&#x3D;&quot;w-8 h-8 mx-2&quot;&gt;
   Logging In...
-&lt;/div&gt;</code></pre>
+&lt;/div&gt; --&gt;</code></pre>
     </div>
 
 
@@ -832,9 +834,9 @@ export class Login {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div class="flex flex-row w-screen h-screen justify-between">  <!-- left panel -->  <div class="w-6/12 h-full flex flex-col p-12">    <div class="flex flex-row my-8 items-center">      <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>    </div>    <h1 class="font-bold text-2xl text-gray-700 my-2">Welcome Back!</h1>    <p class="">Access your personalized lessons and materials.</p>    <form class="mt-2" #form="ngForm">      <!-- Email Input -->      <div class="flex flex-col my-6 font-medium">        <label class="text-gray-400">Email Address</label>        <input          type="email"          name="email"          placeholder="Email Address"          class="bg-gray-100 p-4 rounded-md"          [(ngModel)]="email"          required          email          #emailCtrl="ngModel"        />        <!-- Error messages -->        @if (emailCtrl.invalid && emailCtrl.touched) {          <div class="text-red-500 text-sm mt-1">            @if (emailCtrl.errors?.[\'required\']) {<span>Email is required</span>}            @if (emailCtrl.errors?.[\'email\']) {<span>Invalid email format</span>}          </div>        }      </div>      <!-- Password Input -->      <div class="flex flex-col my-6 font-medium relative">        <label class="text-gray-400">Password</label>        <input           [type]="passwordVisible"           name="password"           placeholder="Password"           class="bg-gray-100 p-4 rounded-md"           [(ngModel)]="password"          required          password          #passwordCtrl="ngModel"        />        <!-- Error messages -->        @if (passwordCtrl.invalid && passwordCtrl.touched) {          <div class="text-red-500 text-sm mt-1">            <span>Password is required</span>          </div>        }        <button type="button" (click)="togglePasswordVisibility()"class="absolute p-4 right-0 top-6 bottom-6" >          <img src="images/eye-icon.svg" alt="Toggle Visibility" class="w-6">        </button>      </div>      <button         type="submit"         class="w-full rounded-md p-4 text-white font-bold bg-prussian-blue-900 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500"         (click)="onSubmit()"         [disabled]="loading"      >        Next      </button>    </form>    <div class="self-center m-4">      New to Maestro? <a href="/signup" class="font-medium text-prussian-blue-900 hover:text-prussian-blue-500">Sign Up!</a>    </div>  </div>  <!-- right panel -->  <div class="w-6/12 h-full relative">    <img src="images/person-studying-1.png" alt="Maestro Logo" class="h-full w-full object-cover">    <div class="flex flex-row m-8 items-center absolute left-0 bottom-0">      <img src="images/logo-white.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-white">Maestro</span>    </div>  </div></div><div [class]="`absolute left-4 bottom-4 flex flex-row items-center ${loading ? \'\' : \'hidden\'}`">  <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">  Logging In...</div></div>'
+        var COMPONENT_TEMPLATE = '<div><div class="flex flex-row w-screen h-screen justify-between">  <!-- left panel -->  <div class="w-full lg-w-6/12 h-full flex flex-col p-12">    <!-- Header -->    <div class="flex flex-row my-8 items-center">      <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>    </div>    <h1 class="font-bold text-2xl text-gray-700 my-2">Welcome Back!</h1>    <p class="">Access your personalized lessons and materials.</p>    <form class="mt-2" #form="ngForm">      <!-- Email Input -->      <div class="flex flex-col my-6 font-medium">        <label class="text-gray-400">Email Address</label>        <input          type="email"          name="email"          placeholder="Email Address"          class="bg-gray-100 p-4 rounded-md"          [(ngModel)]="email"          required          email          #emailCtrl="ngModel"        />        <!-- Error messages -->        @if (emailCtrl.invalid && emailCtrl.touched) {          <div class="text-red-500 text-sm mt-1">            @if (emailCtrl.errors?.[\'required\']) {<span>Email is required</span>}            @if (emailCtrl.errors?.[\'email\']) {<span>Invalid email format</span>}          </div>        }      </div>      <!-- Password Input -->      <div class="flex flex-col my-6 font-medium relative">        <label class="text-gray-400">Password</label>        <input           [type]="passwordVisible"           name="password"           placeholder="Password"           class="bg-gray-100 p-4 rounded-md"           [(ngModel)]="password"          required          password          #passwordCtrl="ngModel"        />        <!-- Error messages -->        @if (passwordCtrl.invalid && passwordCtrl.touched) {          <div class="text-red-500 text-sm mt-1">            <span>Password is required</span>          </div>        }        <button type="button" (click)="togglePasswordVisibility()"class="absolute p-4 right-0 top-6 bottom-6" >          <img src="images/eye-icon.svg" alt="Toggle Visibility" class="w-6">        </button>      </div>      <button         type="submit"         class="w-full rounded-md p-4 text-white font-bold bg-prussian-blue-900 lg:hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 relative"         (click)="onSubmit()"         [disabled]="loading"      >        Next        <img src="images/spinner.gif" alt="" [class]="`absolute right-2 top-3 w-8 h-8 mx-2  ${loading ? \'\' : \'hidden\'}`">      </button>    </form>    <div class="self-center m-4 pb-4">      New to Maestro? <a href="/signup" class="font-medium text-prussian-blue-900 hover:text-prussian-blue-500">Sign Up!</a>    </div>  </div>  <!-- right panel -->  <div class="w-full h-full relative hidden lg:block">    <img src="images/person-studying-1.png" alt="Maestro Logo" class="h-full w-full object-cover">    <div class="flex flex-row m-8 items-center absolute left-0 bottom-0">      <img src="images/logo-white.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-white">Maestro</span>    </div>  </div></div><!-- <div [class]="`absolute left-4 top-8 flex flex-row items-center ${loading ? \'\' : \'hidden\'}`">  <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">  Logging In...</div> --></div>'
     var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'CheckEmail', 'selector': 'app-check-email'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
-    var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'}];
+    var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'},{'name': 'PreferenceValidator', 'selector': '[appPreferenceValidator]'},{'name': 'SubjectNameValidator', 'selector': '[appSubjectNameValidator]'}];
     var ACTUAL_COMPONENT = {'name': 'Login'};
 </script>
 <script src="../js/tree.js"></script>
