--- a/docs/components/Signup.html
+++ b/docs/components/Signup.html
@@ -845,22 +845,21 @@ export class Signup {
 
   onSubmit() {
     this.loading &#x3D; true;
-    // Later: replace with real API call
     if (this.emailCtrl.invalid || this.passwordCtrl.invalid || this.firstnameCtrl.invalid || this.lastnameCtrl.invalid) {
       this.notify.showError(&quot;first name, last name, valid email, and valid password are required&quot;);
       this.loading &#x3D; false;
     } else {
       this.authService.signup({ 
-        first_name: this.firstname, last_name: this.lastname, email: this.email, password: this.password }).subscribe({
+        first_name: this.firstname, last_name: this.lastname, email: this.email.toLowerCase(), password: this.password }).subscribe({
         next: (response) &#x3D;&gt; {
           console.log(&#x27;Signup successful&#x27;, response);
           this.notify.showSuccess(&#x27;Signup successful! Please log in.&#x27;);
           this.loading &#x3D; false;
-          this.router.navigateByUrl(&#x27;/check-email&#x27;, { state: { email: this.email } });
+          this.router.navigateByUrl(&#x27;/check-email&#x27;, { state: { email: this.email.toLowerCase() } });
         },
-        error: (error) &#x3D;&gt; {
-          console.error(&#x27;Signup failed&#x27;, error);
-          this.notify.showError(&#x27;Signup failed, Please try again.&#x27;);
+        error: (res) &#x3D;&gt; {
+          console.error(&#x27;Signup failed&#x27;, res);
+          this.notify.showError(res.error.message || &#x27;Signup failed. Please try again.&#x27;);
           this.loading &#x3D; false;
           this.cdr.detectChanges();
         }
@@ -874,7 +873,9 @@ export class Signup {
     <div class="tab-pane fade " id="templateData">
         <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;flex flex-row w-screen h-screen justify-between&quot;&gt;
   &lt;!-- left panel --&gt;
-  &lt;div class&#x3D;&quot;w-6/12 h-full flex flex-col p-12&quot;&gt;
+  &lt;div class&#x3D;&quot;w-full lg:w-6/12 h-full flex flex-col p-12&quot;&gt;
+
+    &lt;!-- Header --&gt;
     &lt;div class&#x3D;&quot;flex flex-row my-8 items-center&quot;&gt;
       &lt;img src&#x3D;&quot;images/logo-coloured.svg&quot; alt&#x3D;&quot;Maestro Logo&quot; class&#x3D;&quot;w-12 mr-2&quot;&gt;
       &lt;span class&#x3D;&quot;font-serif text-3xl h-max text-prussian-blue-900&quot;&gt;Maestro&lt;/span&gt;
@@ -975,19 +976,20 @@ export class Signup {
 
       &lt;button 
         type&#x3D;&quot;submit&quot; 
-        class&#x3D;&quot;w-full rounded-md p-4 text-white font-bold bg-prussian-blue-900 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500&quot; 
+        class&#x3D;&quot;w-full rounded-md p-4 text-white font-bold bg-prussian-blue-900 lg:hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 relative&quot; 
         (click)&#x3D;&quot;onSubmit()&quot;
         [disabled]&#x3D;&quot;loading&quot;
       &gt;
         Next
+        &lt;img src&#x3D;&quot;images/spinner.gif&quot; alt&#x3D;&quot;&quot; [class]&#x3D;&quot;&#x60;absolute right-2 top-3 w-8 h-8 mx-2  ${loading ? &#x27;&#x27; : &#x27;hidden&#x27;}&#x60;&quot;&gt;
       &lt;/button&gt;
     &lt;/form&gt;
-    &lt;div class&#x3D;&quot;self-center m-4&quot;&gt;
+    &lt;div class&#x3D;&quot;self-center m-4 pb-4&quot;&gt;
       Have a Maestro account? &lt;a href&#x3D;&quot;/login&quot; class&#x3D;&quot;font-medium text-prussian-blue-900 hover:text-prussian-blue-500&quot;&gt;Log In&lt;/a&gt;
     &lt;/div&gt;
   &lt;/div&gt;
   &lt;!-- right panel --&gt;
-  &lt;div class&#x3D;&quot;w-6/12 h-full relative&quot;&gt;
+  &lt;div class&#x3D;&quot;w-6/12 h-full relative hidden lg:block&quot;&gt;
     &lt;img src&#x3D;&quot;images/person-studying-1.png&quot; alt&#x3D;&quot;Maestro Logo&quot; class&#x3D;&quot;h-full w-full object-cover&quot;&gt;
     &lt;div class&#x3D;&quot;flex flex-row m-8 items-center absolute left-0 bottom-0&quot;&gt;
       &lt;img src&#x3D;&quot;images/logo-white.svg&quot; alt&#x3D;&quot;Maestro Logo&quot; class&#x3D;&quot;w-12 mr-2&quot;&gt;
@@ -996,10 +998,10 @@ export class Signup {
   &lt;/div&gt;
 &lt;/div&gt;
 
-&lt;div [class]&#x3D;&quot;&#x60;absolute left-4 bottom-4 flex flex-row items-center ${loading ? &#x27;&#x27; : &#x27;hidden&#x27;}&#x60;&quot;&gt;
+&lt;!-- &lt;div [class]&#x3D;&quot;&#x60;absolute left-4 top-8 flex flex-row items-center ${loading ? &#x27;&#x27; : &#x27;hidden&#x27;}&#x60;&quot;&gt;
   &lt;img src&#x3D;&quot;images/spinner.gif&quot; alt&#x3D;&quot;&quot; class&#x3D;&quot;w-8 h-8 mx-2&quot;&gt;
   Signing Up...
-&lt;/div&gt;</code></pre>
+&lt;/div&gt; --&gt;</code></pre>
     </div>
 
 
@@ -1028,9 +1030,9 @@ export class Signup {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div class="flex flex-row w-screen h-screen justify-between">  <!-- left panel -->  <div class="w-6/12 h-full flex flex-col p-12">    <div class="flex flex-row my-8 items-center">      <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>    </div>    <h1 class="font-bold text-2xl text-gray-700 my-2">Meet Maestro</h1>    <p class="">Your AI-powered assistant for mastering complex subjects, simplified.</p>    <form class="mt-6" #form="ngForm">      <div class="flex flex-row justify-between">        <!-- First Name Input -->        <div class="flex flex-col font-medium relative w-2/4 mr-2">          <label class="text-gray-400">First Name</label>          <input             type="text"             name="firstname"             placeholder="First Name"             class="bg-gray-100 p-4 rounded-md"             [(ngModel)]="firstname"            required            firstname            #firstnameCtrl="ngModel"          />          <!-- Error messages -->          @if (firstnameCtrl.invalid && firstnameCtrl.touched) {            <div class="text-red-500 text-sm mt-1">              <span>First Name is required</span>            </div>          }        </div>        <!-- Last Name Input -->        <div class="flex flex-col font-medium relative w-2/4 ml-2">          <label class="text-gray-400">Last Name</label>          <input             type="text"             name="lastname"             placeholder="Last Name"             class="bg-gray-100 p-4 rounded-md"             [(ngModel)]="lastname"            required            lastname            #lastnameCtrl="ngModel"          />          <!-- Error messages -->          @if (lastnameCtrl.invalid && lastnameCtrl.touched) {            <div class="text-red-500 text-sm mt-1">              <span>Last Name is required</span>            </div>          }        </div>      </div>      <!-- Email Input -->      <div class="flex flex-col my-6 font-medium">        <label class="text-gray-400">Email Address</label>        <input          type="email"          name="email"          placeholder="Email Address"          class="bg-gray-100 p-4 rounded-md"          [(ngModel)]="email"          required          email          #emailCtrl="ngModel"        />        <!-- Error messages -->        @if (emailCtrl.invalid && emailCtrl.touched) {          <div class="text-red-500 text-sm mt-1">            @if (emailCtrl.errors?.[\'required\']) {<span>Email is required</span>}            @if (emailCtrl.errors?.[\'email\']) {<span>Invalid email format</span>}          </div>        }      </div>      <!-- Password Input -->      <div class="flex flex-col my-6 font-medium relative">        <label class="text-gray-400">Password</label>        <input           [type]="passwordVisible"           name="password"           placeholder="Password"           class="bg-gray-100 p-4 rounded-md"           [(ngModel)]="password"          required          password          appPasswordValidator          #passwordCtrl="ngModel"        />        <!-- Error messages -->        @if (passwordCtrl.invalid && passwordCtrl.touched) {          <div class="text-red-500 text-sm mt-1">            @if (passwordCtrl.errors?.[\'required\']) {<span>Password is required</span>}            @if (passwordCtrl.errors?.[\'invalidPassword\']) {<span>Password must be at least 8 characters and include letters & numbers</span>}          </div>        }        <button type="button" (click)="togglePasswordVisibility()"class="absolute p-4 right-0 top-6 bottom-6" >          <img src="images/eye-icon.svg" alt="Toggle Visibility" class="w-6">        </button>      </div>      <button         type="submit"         class="w-full rounded-md p-4 text-white font-bold bg-prussian-blue-900 hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500"         (click)="onSubmit()"        [disabled]="loading"      >        Next      </button>    </form>    <div class="self-center m-4">      Have a Maestro account? <a href="/login" class="font-medium text-prussian-blue-900 hover:text-prussian-blue-500">Log In</a>    </div>  </div>  <!-- right panel -->  <div class="w-6/12 h-full relative">    <img src="images/person-studying-1.png" alt="Maestro Logo" class="h-full w-full object-cover">    <div class="flex flex-row m-8 items-center absolute left-0 bottom-0">      <img src="images/logo-white.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-white">Maestro</span>    </div>  </div></div><div [class]="`absolute left-4 bottom-4 flex flex-row items-center ${loading ? \'\' : \'hidden\'}`">  <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">  Signing Up...</div></div>'
+        var COMPONENT_TEMPLATE = '<div><div class="flex flex-row w-screen h-screen justify-between">  <!-- left panel -->  <div class="w-full lg:w-6/12 h-full flex flex-col p-12">    <!-- Header -->    <div class="flex flex-row my-8 items-center">      <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>    </div>    <h1 class="font-bold text-2xl text-gray-700 my-2">Meet Maestro</h1>    <p class="">Your AI-powered assistant for mastering complex subjects, simplified.</p>    <form class="mt-6" #form="ngForm">      <div class="flex flex-row justify-between">        <!-- First Name Input -->        <div class="flex flex-col font-medium relative w-2/4 mr-2">          <label class="text-gray-400">First Name</label>          <input             type="text"             name="firstname"             placeholder="First Name"             class="bg-gray-100 p-4 rounded-md"             [(ngModel)]="firstname"            required            firstname            #firstnameCtrl="ngModel"          />          <!-- Error messages -->          @if (firstnameCtrl.invalid && firstnameCtrl.touched) {            <div class="text-red-500 text-sm mt-1">              <span>First Name is required</span>            </div>          }        </div>        <!-- Last Name Input -->        <div class="flex flex-col font-medium relative w-2/4 ml-2">          <label class="text-gray-400">Last Name</label>          <input             type="text"             name="lastname"             placeholder="Last Name"             class="bg-gray-100 p-4 rounded-md"             [(ngModel)]="lastname"            required            lastname            #lastnameCtrl="ngModel"          />          <!-- Error messages -->          @if (lastnameCtrl.invalid && lastnameCtrl.touched) {            <div class="text-red-500 text-sm mt-1">              <span>Last Name is required</span>            </div>          }        </div>      </div>      <!-- Email Input -->      <div class="flex flex-col my-6 font-medium">        <label class="text-gray-400">Email Address</label>        <input          type="email"          name="email"          placeholder="Email Address"          class="bg-gray-100 p-4 rounded-md"          [(ngModel)]="email"          required          email          #emailCtrl="ngModel"        />        <!-- Error messages -->        @if (emailCtrl.invalid && emailCtrl.touched) {          <div class="text-red-500 text-sm mt-1">            @if (emailCtrl.errors?.[\'required\']) {<span>Email is required</span>}            @if (emailCtrl.errors?.[\'email\']) {<span>Invalid email format</span>}          </div>        }      </div>      <!-- Password Input -->      <div class="flex flex-col my-6 font-medium relative">        <label class="text-gray-400">Password</label>        <input           [type]="passwordVisible"           name="password"           placeholder="Password"           class="bg-gray-100 p-4 rounded-md"           [(ngModel)]="password"          required          password          appPasswordValidator          #passwordCtrl="ngModel"        />        <!-- Error messages -->        @if (passwordCtrl.invalid && passwordCtrl.touched) {          <div class="text-red-500 text-sm mt-1">            @if (passwordCtrl.errors?.[\'required\']) {<span>Password is required</span>}            @if (passwordCtrl.errors?.[\'invalidPassword\']) {<span>Password must be at least 8 characters and include letters & numbers</span>}          </div>        }        <button type="button" (click)="togglePasswordVisibility()"class="absolute p-4 right-0 top-6 bottom-6" >          <img src="images/eye-icon.svg" alt="Toggle Visibility" class="w-6">        </button>      </div>      <button         type="submit"         class="w-full rounded-md p-4 text-white font-bold bg-prussian-blue-900 lg:hover:bg-prussian-blue-500 disabled:bg-prussian-blue-500 relative"         (click)="onSubmit()"        [disabled]="loading"      >        Next        <img src="images/spinner.gif" alt="" [class]="`absolute right-2 top-3 w-8 h-8 mx-2  ${loading ? \'\' : \'hidden\'}`">      </button>    </form>    <div class="self-center m-4 pb-4">      Have a Maestro account? <a href="/login" class="font-medium text-prussian-blue-900 hover:text-prussian-blue-500">Log In</a>    </div>  </div>  <!-- right panel -->  <div class="w-6/12 h-full relative hidden lg:block">    <img src="images/person-studying-1.png" alt="Maestro Logo" class="h-full w-full object-cover">    <div class="flex flex-row m-8 items-center absolute left-0 bottom-0">      <img src="images/logo-white.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-white">Maestro</span>    </div>  </div></div><!-- <div [class]="`absolute left-4 top-8 flex flex-row items-center ${loading ? \'\' : \'hidden\'}`">  <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">  Signing Up...</div> --></div>'
     var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'CheckEmail', 'selector': 'app-check-email'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
-    var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'}];
+    var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'},{'name': 'PreferenceValidator', 'selector': '[appPreferenceValidator]'},{'name': 'SubjectNameValidator', 'selector': '[appSubjectNameValidator]'}];
     var ACTUAL_COMPONENT = {'name': 'Signup'};
 </script>
 <script src="../js/tree.js"></script>
