--- a/docs/components/Toast.html
+++ b/docs/components/Toast.html
@@ -361,7 +361,7 @@
                 <tr>
                     <td class="col-md-4">
                         <i>Default value : </i><code>computed(() &#x3D;&gt; ({
-    &#x27;fixed bottom-4 right-4 z-50 flex items-center space-x-3 p-4 rounded shadow-lg text-white&#x27;:
+    &#x27;z-50 flex items-center space-x-3 p-4 rounded shadow-lg text-white&#x27;:
       true,
     &#x27;bg-green-500&#x27;: this.type() &#x3D;&#x3D;&#x3D; &#x27;success&#x27;,
     &#x27;bg-red-500&#x27;: this.type() &#x3D;&#x3D;&#x3D; &#x27;error&#x27;,
@@ -479,7 +479,7 @@ export class Toast {
   msg: any;
   type: any;
   classes &#x3D; computed(() &#x3D;&gt; ({
-    &#x27;fixed bottom-4 right-4 z-50 flex items-center space-x-3 p-4 rounded shadow-lg text-white&#x27;:
+    &#x27;z-50 flex items-center space-x-3 p-4 rounded shadow-lg text-white&#x27;:
       true,
     &#x27;bg-green-500&#x27;: this.type() &#x3D;&#x3D;&#x3D; &#x27;success&#x27;,
     &#x27;bg-red-500&#x27;: this.type() &#x3D;&#x3D;&#x3D; &#x27;error&#x27;,
@@ -497,9 +497,11 @@ export class Toast {
 
     <div class="tab-pane fade " id="templateData">
         <pre class="line-numbers"><code class="language-html">@if(msg()) {
-  &lt;div [ngClass]&#x3D;&quot;classes()&quot;&gt;
-    &lt;span class&#x3D;&quot;flex-1&quot;&gt;{{ msg() }}&lt;/span&gt;
-    &lt;button (click)&#x3D;&quot;close()&quot; class&#x3D;&quot;font-bold&quot;&gt;✕&lt;/button&gt;
+  &lt;div class&#x3D;&quot;fixed top-4 w-full flex items-center justify-center&quot;&gt;
+    &lt;div [ngClass]&#x3D;&quot;classes()&quot;&gt;
+      &lt;span class&#x3D;&quot;flex&quot;&gt;{{ msg() }}&lt;/span&gt;
+      &lt;button (click)&#x3D;&quot;close()&quot; class&#x3D;&quot;font-bold&quot;&gt;✕&lt;/button&gt;
+    &lt;/div&gt;
   &lt;/div&gt;
 }
 </code></pre>
@@ -531,9 +533,9 @@ export class Toast {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div>@if(msg()) {  <div [ngClass]="classes()">    <span class="flex-1">{{ msg() }}</span>    <button (click)="close()" class="font-bold">✕</button>  </div>}</div>'
+        var COMPONENT_TEMPLATE = '<div>@if(msg()) {  <div class="fixed top-4 w-full flex items-center justify-center">    <div [ngClass]="classes()">      <span class="flex">{{ msg() }}</span>      <button (click)="close()" class="font-bold">✕</button>    </div>  </div>}</div>'
     var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'CheckEmail', 'selector': 'app-check-email'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
-    var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'}];
+    var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'},{'name': 'PreferenceValidator', 'selector': '[appPreferenceValidator]'},{'name': 'SubjectNameValidator', 'selector': '[appSubjectNameValidator]'}];
     var ACTUAL_COMPONENT = {'name': 'Toast'};
 </script>
 <script src="../js/tree.js"></script>
