--- a/docs/components/VerifyEmail.html
+++ b/docs/components/VerifyEmail.html
@@ -204,6 +204,9 @@
                                 <a href="#authService" >authService</a>
                             </li>
                             <li>
+                                <a href="#notify" >notify</a>
+                            </li>
+                            <li>
                                 <a href="#verified" >verified</a>
                             </li>
                         </ul>
@@ -230,7 +233,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/pages/auth/verify-email/verify-email.ts:13</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/pages/auth/verify-email/verify-email.ts:15</a></div>
                             </td>
                         </tr>
 
@@ -296,7 +299,32 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/pages/auth/verify-email/verify-email.ts:13</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/pages/auth/verify-email/verify-email.ts:14</a></div>
+                        </td>
+                    </tr>
+
+
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="notify"></a>
+                    <span class="name">
+                        <span ><b>notify</b></span>
+                        <a href="#notify"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Default value : </i><code>inject(NotificationService)</code>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/pages/auth/verify-email/verify-email.ts:15</a></div>
                         </td>
                     </tr>
 
@@ -321,7 +349,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="12" class="link-to-prism">src/app/pages/auth/verify-email/verify-email.ts:12</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/app/pages/auth/verify-email/verify-email.ts:13</a></div>
                         </td>
                     </tr>
 
@@ -337,6 +365,7 @@
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, inject } from &#x27;@angular/core&#x27;;
 import { AuthService } from &#x27;../../../core/services/auth.service&#x27;;
 import { Router } from &#x27;@angular/router&#x27;;
+import { NotificationService } from &#x27;../../../core/services/notification.service&#x27;;
 
 @Component({
   selector: &#x27;app-verify-email&#x27;,
@@ -347,6 +376,7 @@ import { Router } from &#x27;@angular/router&#x27;;
 export class VerifyEmail {
   verified &#x3D; false;
   authService &#x3D; inject(AuthService);
+  notify &#x3D; inject(NotificationService);
 
   constructor(private router: Router) {
     // Extract token from URL query params then call verifyEmail
@@ -354,20 +384,20 @@ export class VerifyEmail {
     const token &#x3D; urlParams.get(&#x27;token&#x27;);
 
     if (token) {
-      this.authService.verifyEmail(token).subscribe({
+      this.authService.verifyEmail(token || &#x27;&#x27;).subscribe({
         next: (response) &#x3D;&gt; {
           console.log(&#x27;Email verification successful&#x27;, response);
           this.verified &#x3D; true;
           this.router.navigateByUrl(&#x27;/login&#x27;);
         },
-        error: (error) &#x3D;&gt; {
-          console.error(&#x27;Email verification failed&#x27;, error);
-          alert(&#x27;Email verification failed, Please try again.&#x27;);
+        error: (res) &#x3D;&gt; {
+          console.error(&#x27;Email verification failed&#x27;, res);
+          this.notify.showError(res.error.message || &#x27;Email verification failed. Please try again.&#x27;);
           this.router.navigateByUrl(&#x27;/signup&#x27;);
         }
       });
     } else {
-      alert(&#x27;Invalid verification link.&#x27;);
+      this.notify.showError(&#x27;Invalid verification link.&#x27;);
       this.router.navigateByUrl(&#x27;/signup&#x27;);
     }
   }
@@ -378,23 +408,27 @@ export class VerifyEmail {
     <div class="tab-pane fade " id="templateData">
         <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;flex flex-row w-screen h-screen justify-between&quot;&gt;
   &lt;!-- left panel --&gt;
-  &lt;div class&#x3D;&quot;w-6/12 h-full flex flex-col p-12&quot;&gt;
+  &lt;div class&#x3D;&quot;w-full lg:w-6/12 h-full flex flex-col p-12&quot;&gt;
+
+    &lt;!-- Header --&gt;
     &lt;div class&#x3D;&quot;flex flex-row my-8 items-center&quot;&gt;
       &lt;img src&#x3D;&quot;images/logo-coloured.svg&quot; alt&#x3D;&quot;Maestro Logo&quot; class&#x3D;&quot;w-12 mr-2&quot;&gt;
       &lt;span class&#x3D;&quot;font-serif text-3xl h-max text-prussian-blue-900&quot;&gt;Maestro&lt;/span&gt;
     &lt;/div&gt;
+
     @if (verified) {
       &lt;div&gt;
         Email verified successfully!&lt;br&gt;Now redirecting to login...
       &lt;/div&gt;
     } @else {
-      &lt;div&gt;
+      &lt;div class&#x3D;&quot;flex flex-row items-center&quot;&gt;
+        &lt;img src&#x3D;&quot;images/spinner.gif&quot; alt&#x3D;&quot;&quot; class&#x3D;&quot;w-8 h-8 mx-2&quot;&gt;
         Please wait, verifying email...
       &lt;/div&gt;
     }
   &lt;/div&gt;
   &lt;!-- right panel --&gt;
-  &lt;div class&#x3D;&quot;w-6/12 h-full relative&quot;&gt;
+  &lt;div class&#x3D;&quot;w-6/12 h-full relative hidden lg:block&quot;&gt;
     &lt;img src&#x3D;&quot;images/person-studying-1.png&quot; alt&#x3D;&quot;Maestro Logo&quot; class&#x3D;&quot;h-full w-full object-cover&quot;&gt;
     &lt;div class&#x3D;&quot;flex flex-row m-8 items-center absolute left-0 bottom-0&quot;&gt;
       &lt;img src&#x3D;&quot;images/logo-white.svg&quot; alt&#x3D;&quot;Maestro Logo&quot; class&#x3D;&quot;w-12 mr-2&quot;&gt;
@@ -430,9 +464,9 @@ export class VerifyEmail {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div class="flex flex-row w-screen h-screen justify-between">  <!-- left panel -->  <div class="w-6/12 h-full flex flex-col p-12">    <div class="flex flex-row my-8 items-center">      <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>    </div>    @if (verified) {      <div>        Email verified successfully!<br>Now redirecting to login...      </div>    } @else {      <div>        Please wait, verifying email...      </div>    }  </div>  <!-- right panel -->  <div class="w-6/12 h-full relative">    <img src="images/person-studying-1.png" alt="Maestro Logo" class="h-full w-full object-cover">    <div class="flex flex-row m-8 items-center absolute left-0 bottom-0">      <img src="images/logo-white.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-white">Maestro</span>    </div>  </div></div></div>'
+        var COMPONENT_TEMPLATE = '<div><div class="flex flex-row w-screen h-screen justify-between">  <!-- left panel -->  <div class="w-full lg:w-6/12 h-full flex flex-col p-12">    <!-- Header -->    <div class="flex flex-row my-8 items-center">      <img src="images/logo-coloured.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-prussian-blue-900">Maestro</span>    </div>    @if (verified) {      <div>        Email verified successfully!<br>Now redirecting to login...      </div>    } @else {      <div class="flex flex-row items-center">        <img src="images/spinner.gif" alt="" class="w-8 h-8 mx-2">        Please wait, verifying email...      </div>    }  </div>  <!-- right panel -->  <div class="w-6/12 h-full relative hidden lg:block">    <img src="images/person-studying-1.png" alt="Maestro Logo" class="h-full w-full object-cover">    <div class="flex flex-row m-8 items-center absolute left-0 bottom-0">      <img src="images/logo-white.svg" alt="Maestro Logo" class="w-12 mr-2">      <span class="font-serif text-3xl h-max text-white">Maestro</span>    </div>  </div></div></div>'
     var COMPONENTS = [{'name': 'About', 'selector': 'app-about'},{'name': 'App', 'selector': 'app-root'},{'name': 'Chatbot', 'selector': 'app-chatbot'},{'name': 'CheckEmail', 'selector': 'app-check-email'},{'name': 'ConfirmLogout', 'selector': 'app-confirm-logout'},{'name': 'Contact', 'selector': 'app-contact'},{'name': 'CreationStepTab', 'selector': 'app-creation-step-tab'},{'name': 'Features', 'selector': 'app-features'},{'name': 'Header', 'selector': 'app-header'},{'name': 'Home', 'selector': 'app-home'},{'name': 'Landing', 'selector': 'app-landing'},{'name': 'LessonPage', 'selector': 'app-lesson-page'},{'name': 'Login', 'selector': 'app-login'},{'name': 'NamingUpload', 'selector': 'app-naming-upload'},{'name': 'NotFound', 'selector': 'app-not-found'},{'name': 'Practice', 'selector': 'app-practice'},{'name': 'Pricing', 'selector': 'app-pricing'},{'name': 'QuestionSettings', 'selector': 'app-question-settings'},{'name': 'Sidebar', 'selector': 'app-sidebar'},{'name': 'Signup', 'selector': 'app-signup'},{'name': 'Subjects', 'selector': 'app-subjects'},{'name': 'Subscription', 'selector': 'app-subscription'},{'name': 'Subtopic', 'selector': 'app-subtopic'},{'name': 'Toast', 'selector': 'app-toast'},{'name': 'TopicPreferences', 'selector': 'app-topic-preferences'},{'name': 'VerifyEmail', 'selector': 'app-verify-email'}];
-    var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'}];
+    var DIRECTIVES = [{'name': 'FileTypeDirective', 'selector': '[appFileType]'},{'name': 'PasswordValidator', 'selector': '[appPasswordValidator]'},{'name': 'PreferenceValidator', 'selector': '[appPreferenceValidator]'},{'name': 'SubjectNameValidator', 'selector': '[appSubjectNameValidator]'}];
     var ACTUAL_COMPONENT = {'name': 'VerifyEmail'};
 </script>
 <script src="../js/tree.js"></script>
