fixed latex display

--- a/src/app/pages/home/home/home.html
+++ b/src/app/pages/home/home/home.html
@@ -1,4 +1,4 @@
-<div class="overflow-x-hidden">
+<div class="overflow-x-hidden overflow-y-auto">
   <app-landing (navigateSection)="scrollTo($event)" id="top"></app-landing>
   <app-features id="features"></app-features>
   <app-pricing id="pricing"></app-pricing>
