--- a/src/app/pages/dashboard/subjects/subjects.html
+++ b/src/app/pages/dashboard/subjects/subjects.html
@@ -45,6 +45,7 @@
           <button 
             class="relative flex flex-col justify-between overflow-hidden rounded-lg w-full sm:w-56 h-28 p-4 m-4 bg-prussian-blue-150 hover:bg-prussian-blue-200 hover:top-2"
             (click)="navigateSubject(subject)"
+            (contextmenu)="onSubjectRightClick($event, subject)"
           >
             <div class="flex flex-row justify-between items-center">
               <span class="font-medium text-prussian-blue-900">{{subject.name}}</span>
@@ -61,9 +62,29 @@
               </div>
               <span>{{(subject.completion*100).toFixed(0)}}%</span>
             </div>
+            <!-- Delete button -->
+            @if (rightClickSubject?.id == subject.id) {
+              <div class="absolute top-2 right-2 p-1 bg-white rounded-md flex flex-col items-center justify-center">
+                <button class="rounded-md px-2 py-1 text-white bg-red-600 hover:bg-red-400" (click)="openDelete()">
+                  Delete
+                </button>
+              </div>
+            }
           </button>
         }
       </div>
     </div>
   }
+}
+
+@if (showDeleteConfirmation) {
+  <app-confirmation
+    (cancel)="cancelDelete()"
+    (confirm)="deleteSubject()"
+    [title]="'Delete Subject'"
+    [message]="`Are you sure you want to delete '${rightClickSubject?.name}'?`"
+    [acceptText]="'Yes'"
+    [cancelText]="'No'"
+  >
+  </app-confirmation>
 }
