fixed sidebar close icon bug

--- a/src/app/pages/lesson/sidebar/sidebar.html
+++ b/src/app/pages/lesson/sidebar/sidebar.html
@@ -7,7 +7,7 @@
       </button>
       <span class="text-prussian-blue-900 hover:text-prussian-blue-500 mx-4 cursor-pointer font-medium" routerLink="/dashboard">Back to Subjects</span>
     </div>
-    <button class="p-3 rounded-full bg-prussian-blue-800 hover:bg-prussian-blue-500" (click)="closeBar()">
+    <button class="block lg:hidden p-3 rounded-full bg-prussian-blue-800 hover:bg-prussian-blue-500" (click)="closeBar()">
       <img src="images/x-icon.svg" alt="">
     </button>
   </div>
