--- a/src/app/shared/components/toast/toast.html
+++ b/src/app/shared/components/toast/toast.html
@@ -1,5 +1,5 @@
 @if(msg()) {
-  <div class="fixed top-4 w-full flex items-center justify-center">
+  <div class="z-50 fixed top-4 w-full flex items-center justify-center">
     <div [ngClass]="classes()">
       <span class="flex">{{ msg() }}</span>
       <button (click)="close()" class="font-bold">✕</button>
