fixed some sizing issues

--- a/src/app/pages/lesson/subtopic/subtopic.html
+++ b/src/app/pages/lesson/subtopic/subtopic.html
@@ -1,6 +1,6 @@
 <div class="w-full flex flex-col">
   <!-- Top Section -->
-  <div class="flex flex-row justify-between pt-4 pb-2 sticky z-[9] top-0 bg-white">
+  <div class="flex flex-row justify-between lg:pt-4 lg:pb-2 sticky z-[9] top-0 bg-white">
     <!-- Topic tree display -->
     <div class="hidden lg:flex flex-row items-center text-prussian-blue-800">
       {{ currentTopic().title }}
