--- a/src/app/pages/lesson/lesson-page/lesson-page.html
+++ b/src/app/pages/lesson/lesson-page/lesson-page.html
@@ -11,7 +11,7 @@
 
 <!-- Practice (Exercise/Exam) Header -->
 @if (currentView.type === 'exercise' || currentView.type === 'exam') {
-  <div class="w-full bg-gray-100 flex flex-row items-center justify-between px-6 lg:px-12 py-6">
+  <div class="w-full bg-gray-100 flex flex-row items-center justify-between px-6 lg:px-12 py-3 lg:py-6">
     <div class="">
       <h1 class="hidden lg:block text-3xl font-medium text-prussian-blue-900">
         Practice {{capitalizeFirstLetter(currentView.type)}} for {{(currentView.type === 'exercise') ? getTopicDataFromExercise().title : subjectContent.subject_name}}
@@ -40,7 +40,7 @@
 <div class="w-full flex flex-row flex-grow overflow-hidden mt-2 relative">
   <!-- Sidebar Toggle -->
   <button 
-    [class]="`absolute z-20 top-4 ${sidebarOpen ? 'hidden' : 'left-0 rounded-r-full'} p-3 bg-prussian-blue-800 lg:hidden`"
+    [class]="`absolute z-20 top-0 ${sidebarOpen ? 'hidden' : 'left-0 rounded-r-full'} p-3 bg-prussian-blue-800 lg:hidden`"
     (click)="toggleSidebar()"
   >
     <img src="images/subject-icon-white.svg" alt="" class="w-6">
@@ -60,7 +60,7 @@
   <div #contentContainer [class]="`flex overflow-y-auto scrollbar-thin scrollbar-thumb-gray-400 hover:scrollbar-thumb-gray-500 w-full lg:${chatOpen ? 'w-6/12' : 'w-9/12'}`">
     @if (currentView.type === 'subtopic') {
       <app-subtopic 
-        class="w-full mx-8 lg:ml-12"
+        class="w-full px-8 lg:pl-12"
         [currentView]="currentView" 
         [currentTopic]="getTopicDataFromSubtopic()" 
         [getPosition]="getSubtopicPosition()"
@@ -69,7 +69,7 @@
     }
     @if (currentView.type === 'exercise' || currentView.type === 'exam') {
       <app-practice 
-        class="w-full mx-8 lg:ml-12"
+        class="w-full px-8 lg:pl-12"
         [currentView]="currentView" 
         [subjectId]="subjectId"
         [topicId]="(currentView.type == 'exercise') ? getTopicDataFromExercise().id : null"
