--- a/src/app/pages/lesson/sidebar/sidebar.html
+++ b/src/app/pages/lesson/sidebar/sidebar.html
@@ -1,6 +1,6 @@
 <div class="mx-6 mb-6 h-max relative">
   <!-- Return to Dashboard -->
-  <div class="flex flex-row mb-2 pt-6 items-center justify-between sticky top-0 bg-white z-10">
+  <div class="flex flex-row mb-2 lg:pt-6 items-center justify-between sticky top-0 bg-white z-10">
     <div class="flex flex-row items-center">
       <button class="rounded-full p-3 bg-prussian-blue-800 hover:bg-prussian-blue-500" routerLink="/dashboard">
         <img src="images/subject-icon-white.svg" alt="" class="w-5">
