bunch of patches

--- a/src/app/pages/auth/verify-email/verify-email.html
+++ b/src/app/pages/auth/verify-email/verify-email.html
@@ -10,7 +10,7 @@
 
     @if (verified) {
       <div>
-        Email verified successfully!<br>Now redirecting to login...
+        Email verified successfully!<br>You can now close this tab.
       </div>
     } @else {
       <div class="flex flex-row items-center">
