--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -19,7 +19,7 @@
 
 <!-- Account Menu -->
 @if (showAccount()) {
-  <div class="absolute top-24 right-4 md:right-8 flex flex-col items-start p-2 rounded-md text-gray-500 bg-white shadow w-[90vw] max-w-sm">
+  <div class="absolute top-16 lg:top-24 right-4 lg:right-8 flex flex-col items-start p-2 rounded-md text-gray-500 bg-white shadow w-[90vw] max-w-sm">
     <div class="flex flex-row items-center my-1 mr-8">
       <img src="images/profile-icon.svg" alt="" class="w-6 mr-2">
       <div>
