--- a/src/app/pages/subject-create/naming-upload/naming-upload.html
+++ b/src/app/pages/subject-create/naming-upload/naming-upload.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <div class="flex flex-col w-full px-12 md:px-32">
+  <!-- Creation step tabs -->
   <div class="flex flex-row mb-8 w-full">
     <app-creation-step-tab
       [text]="'My Subject and Materials'"
@@ -20,6 +21,7 @@
       class="hidden md:block w-2/6"
     />
   </div>
+
   <h1 class="text-2xl font-medium">Create a new subject</h1>
   <form #form="ngForm" class="flex flex-col w-full md:w-6/12 my-4">
     <label for="">Subject Name</label>
@@ -63,6 +65,7 @@
         (change)="onFileSelect($event)"
         class="hidden"
         multiple
+        [accept]="acceptString"
       />
       <p class="text-gray-600 text-sm text-center">Upload your files here to start generating personalized lessons for this subject.</p>
       <p class="text-gray-400 text-xs my-2 text-center">
