--- a/src/app/shared/components/confirmation/confirmation.html
+++ b/src/app/shared/components/confirmation/confirmation.html
@@ -16,7 +16,7 @@
         {{cancelText()}}
       </button>
       <button
-        class="px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700"
+        class="px-4 py-2 bg-prussian-blue-800 text-white rounded hover:bg-prussian-blue-500"
         (click)="confirm.emit()"
       >
         {{acceptText()}}
