sub limit circles

--- a/src/app/pages/dashboard/subscription/subscription.html
+++ b/src/app/pages/dashboard/subscription/subscription.html
@@ -139,7 +139,7 @@
               Lesson Generation
             </p>
             <p class="text-sm text-gray-600">
-              {{ lessonsUsed }}/{{ getMaxSubjects() }} personalized lessons generated
+              {{ generatedLessons }}/{{ generatedLimit }} personalized lessons generated
             </p>
           </div>
 
